--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Love</title>
 </head>
 <body>
+    <h1>My Home</h1>
+    <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam amet fugiat sed eaque porro nisi earum beatae corporis laudantium adipisci quod voluptas culpa, blanditiis atque suscipit commodi molestias magnam nemo!</h5>
     
 </body>
 </html>
