top banner added

--- a/index.html
+++ b/index.html
@@ -1,14 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love</title>
+    <title>Rina Gomes</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>My Home</h1>
-    <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam amet fugiat sed eaque porro nisi earum beatae corporis laudantium adipisci quod voluptas culpa, blanditiis atque suscipit commodi molestias magnam nemo!</h5>
-    
+    <section class="hero-section flexible-container">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class=" orange-color">Barbara Gomes</span> World!</h1>
+            <h2>Web Designer </h2>
+            <p>Hello, This is Barbara Rina from Bangladesh. I am a certified web designer with more than 1
+                years.My objective is to continuously guarantee customers’ gratification with quality works expanding
+                customers’ business value.<br><br> Thanks </p>
+            <a class="link-button" target="_blank" href="https://barbarasolution.com/hire-me/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="rina/my-bg.jpg" alt="">
+        </div>
+    </section>
+    <section class="second-section flexible-container">
+        <div class="half-width">
+            <img src="rina/my-bg2.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I am passionate on learning new things. I am on a mission to be a full stack web developer. Hope to be a
+                successful person by 2023.</p>
+            <a class="link-button" target="_blank" href="http://barbarasolution.com/">DOWNLOAD RESUME</a>
+
+        </div>
+    </section>
+    <section class="third-section">
+        <h1>
+            YOU CAN GET FROM ME?
+
+        </h1>
+        <div class="flexible-container">
+            <div id="ftwb" class="experience-item">
+                <h2>BUSINESS WEBSITE
+                </h2>
+                <h3 class="orange-color"> Pro Level Designer
+                </h3>
+                <p>You will get here a modern and high conversional business website which will increate conversion.
+                </p>
+            </div>
+            <div id="bwd" class="experience-item">
+                <h2>E-COMMERCE</h2>
+                <h3 class="orange-color"> Pro Level
+                    Designer
+
+                </h3>
+                <p>You can get here full functional ecommerce website with nice product pages.
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
+
+<footer>
+    <p>© 2021 All rights Reserved by Barbara Rina</p>
+</footer>
+
 </html>
